--- a/IntegradorProgramacionII/PresentationLayer/Views/Shared/_Layout.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link href="~/Content/estilo.css" rel="stylesheet" />
 </head>
 <body>
     @RenderBody()
