--- a/IntegradorProgramacionII/PresentationLayer/Views/Cuenta/Index.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Cuenta/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Index";
 }
 
-<form action="/cuenta/login" method="get">
+<form action="/cuenta/login" method="get" class="form-login">
     <h1>Iniciar sesion</h1>
   <div class="form-group">
     <input type="text" class="form-control" name="username" placeholder="Usuario">
