--- a/IntegradorProgramacionII/PresentationLayer/Content/estilo.css
+++ b/IntegradorProgramacionII/PresentationLayer/Content/estilo.css
@@ -1,16 +1,9 @@
 ﻿@import url(http://fonts.googleapis.com/css?family=Ubuntu:300,400);
 body {
-    background: #23af69; /* Old browsers */
-    background: -moz-linear-gradient(45deg,  #23af69 0%, #88c46a 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#23af69), color-stop(100%,#88c46a)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(45deg,  #23af69 0%,#88c46a 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(45deg,  #23af69 0%,#88c46a 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(45deg,  #23af69 0%,#88c46a 100%); /* IE10+ */
-    background: linear-gradient(45deg,  #23af69 0%,#88c46a 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#23af69', endColorstr='#88c46a',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    background: #808080;
     font-family: 'Ubuntu';
 }
-form {
+.form-login {
     background: rgba(255, 255, 255, 0.8);
     border-radius: 15px;
     margin: auto;
@@ -24,4 +17,25 @@ h1 {
 }
 input {
     padding: 10px;
+}
+.nav-comprar {
+    background: #1d5712;
+    position: absolute;
+    height: 100%;
+    width: 150px;
+    left: 0px;
+    top: 0px;
+    padding: 3px;
+}
+.nav-comprar input {
+    padding: 5px;
+    width: 90%;   
+}
+#tablero {
+    background: #23af69;
+    height: 500px;
+    position: absolute;
+    left: 300px;
+    top: 100px;
+    width: 900px;
 }
