--- a/IntegradorProgramacionII/PresentationLayer/Content/estilo.css
+++ b/IntegradorProgramacionII/PresentationLayer/Content/estilo.css
@@ -6,11 +6,15 @@ body {
 .form-login {
     background: rgba(255, 255, 255, 0.8);
     border-radius: 15px;
-    margin: auto;
-    margin-top: 20%;
     text-align: center;
-    padding: 20px;
-    width: 25%;
+    padding: 10px;
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -150px;  
+    margin-left: -150px;  
 }
 h1 {
     margin-bottom: 50px;
@@ -39,3 +43,17 @@ input {
     top: 100px;
     width: 900px;
 }
+#new-user {
+    background: rgba(240,240,240,0.7);
+    display: none;
+    height:100%;
+    position:absolute;
+    top: 0px;
+    left: 0px;
+    width:100%;
+}
+    #new-user form {
+        background: rgb(255, 255, 255);    
+        height: 450px;
+        margin-top: -225px;
+    }
