--- a/IntegradorProgramacionII/PresentationLayer/Views/Shared/_Layout.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link href="~/Content/estilo.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery-1.7.1.min.js"></script>
 </head>
 <body>
     @RenderBody()
