--- a/IntegradorProgramacionII/PresentationLayer/Views/Cuenta/Index.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Cuenta/Index.cshtml
@@ -14,7 +14,7 @@
    <input type="button" class="btn btn-default" value="Crear Usuario" id="crear-usuario">
 </form>
 <div id="new-user">
-    <form action="/cuenta/singup" method="get" class="form-login">
+    <form action="/cuenta/signup" method="get" class="form-login">
         <h1>Crear Usuario</h1>
         <div class="form-group">
             <input type="text" class="form-control" name="nombre" placeholder="Nombre">
