--- a/IntegradorProgramacionII/PresentationLayer/Views/Cuenta/Signup.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Cuenta/Signup.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "SingUp";
+    ViewBag.Title = "SignUp";
 }
 <h2>Creacion de Usuario</h2>
 <h3>Usuario creado correctamente</h3>
