--- a/IntegradorProgramacionII/PresentationLayer/Content/estilo.css
+++ b/IntegradorProgramacionII/PresentationLayer/Content/estilo.css
@@ -58,9 +58,27 @@ input {
         margin-top: -225px;
     }
 #tablero {
+    background: yellow;
+    height: auto;
+    width: 650px;
+}
+.casillero {
     background: green;
-    border-radius: 50px;
-    border: 10px solid red;
-    height: 300px;
-    width: 600px;
+    border: 1px solid white;
+    display: inline-block;
+    margin: 0px;
+    height:50px;
+    width: 50px;
+}
+ #tablero p {
+        font-size: 21px;
+        text-align: center;
+        -moz-transform: rotate(-90deg);
+        -webkit-transform: rotate(-90deg);
+        -o-transform: rotate(-90deg);
+    }
+#apuesta {
+    position: absolute;
+    left: 300px;
+    bottom: 150px;
 }
