--- a/IntegradorProgramacionII/PresentationLayer/Views/Home/Apuesta.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Home/Apuesta.cshtml
@@ -8,6 +8,6 @@
         <option value="Pleno">Pleno</option>
         <option value="Semi">SemiPleno</option>
     </select>
-
+    <input type="text" name="elegido" id="elegido" disabled="disabled"/>
 </form>
 </div>
