--- a/IntegradorProgramacionII/PresentationLayer/Views/Cuenta/Index.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Cuenta/Index.cshtml
@@ -1,8 +1,4 @@
-﻿@{
-    ViewBag.Title = "Index";
-}
-
-<form action="/cuenta/login" method="get" class="form-login">
+﻿<form action="/cuenta/login" method="get" class="form-login">
     <h1>Iniciar sesion</h1>
   <div class="form-group">
     <input type="text" class="form-control" name="username" placeholder="Usuario">
@@ -17,29 +13,39 @@
     <form action="/cuenta/signup" method="get" class="form-login">
         <h1>Crear Usuario</h1>
         <div class="form-group">
-            <input type="text" class="form-control" name="nombre" placeholder="Nombre">
+            <input type="text" class="form-control" name="nombre" placeholder="Nombre" required="required">
         </div>
         <div class="form-group">
-            <input type="text" class="form-control" name="apellido" placeholder="Apellido">
+            <input type="text" class="form-control" name="apellido" placeholder="Apellido" required="required">
         </div>
         <div class="form-group">
-            <input type="email" class="form-control" name="email" placeholder="Email">
+            <input type="email" class="form-control" name="email" placeholder="Email" required="required">
         </div>
         <div class="form-group">
-            <input type="text" class="form-control" name="username" placeholder="Usuario">
+            <input type="text" class="form-control" name="username" placeholder="Usuario" required="required">
         </div>
         <div class="form-group">
-            <input type="password" class="form-control" name="password" placeholder="Contraseña">
+            <input type="password" class="form-control" name="password" placeholder="Contraseña" required="required">
         </div>
-        <button type="submit" class="btn btn-default">Crear Usuario</button>
-        <input type="reset" class="btn btn-default" value="Cancelar" id="Close">
-    </form>
+        <div class="form-group">
+            <input type="radio" name="avatar" value="1" /><img src="~/Content/images/avatares/1.png" class="mini-avatar" alt="Alternate Text" />
+            <input type="radio" name="avatar" value="2" /><img src="~/Content/images/avatares/2.png" class="mini-avatar" alt="Alternate Text" />
+            <input type="radio" name="avatar" value="3" /><img src="~/Content/images/avatares/3.png" class="mini-avatar" alt="Alternate Text" />
+            <input type="radio" name="avatar" value="4" /><img src="~/Content/images/avatares/4.png" class="mini-avatar" alt="Alternate Text" />
+            <input type="radio" name="avatar" value="5" /><img src="~/Content/images/avatares/5.png" class="mini-avatar" alt="Alternate Text" />
+            <input type="radio" name="avatar" value="6" /><img src="~/Content/images/avatares/6.png" class="mini-avatar" alt="Alternate Text" />
+            <input type="radio" name="avatar" value="7" /><img src="~/Content/images/avatares/7.png" class="mini-avatar" alt="Alternate Text" />
+            <input type="radio" name="avatar" value="8" /><img src="~/Content/images/avatares/8.png" class="mini-avatar" alt="Alternate Text" />
+            <input type="radio" name="avatar" value="9" /><img src="~/Content/images/avatares/9.png" class="mini-avatar" alt="Alternate Text" />
+        </div>
+            <button type="submit" class="btn btn-default">Crear Usuario</button>
+            <input type="reset" class="btn btn-default" value="Cancelar" id="Close">
+</form>
 </div>
 <script>
     $("#crear-usuario").click(function () {
         $("#new-user").show();
     });
-
     $("#Close").click(function () {
         $("#new-user").hide();
     });
