Included total matches and victories of the player

--- a/IntegradorProgramacionII/PresentationLayer/Views/Home/Menu.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Home/Menu.cshtml
@@ -7,6 +7,8 @@
     <nav class="nav-comprar">
         <form action="/home/jugar" method="post">
             <h5>@Model.dinero</h5>
+            <h5>@Model.partidas</h5>
+            <h5>@Model.victorias</h5>
             <button type="submit" class="btn btn-default">Comprar</button>
         </form>
     </nav>
