--- a/IntegradorProgramacionII/PresentationLayer/Views/Cuenta/Index.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Cuenta/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<form action="/cuenta/login" method="get" class="form-login">
+﻿<form action="/cuenta/login" method="post" class="form-login">
     <h1>Iniciar sesion</h1>
   <div class="form-group">
     <input type="text" class="form-control" name="username" placeholder="Usuario">
@@ -10,7 +10,7 @@
    <input type="button" class="btn btn-default" value="Crear Usuario" id="crear-usuario">
 </form>
 <div id="new-user">
-    <form action="/cuenta/signup" method="get" class="form-login">
+    <form action="/cuenta/signup" method="post" class="form-login">
         <h1>Crear Usuario</h1>
         <div class="form-group">
             <input type="text" class="form-control" name="nombre" placeholder="Nombre" required="required">
