--- a/IntegradorProgramacionII/PresentationLayer/Views/Cuenta/ErrorLogin.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Cuenta/ErrorLogin.cshtml
@@ -3,11 +3,13 @@
 @{
     ViewBag.Title = "ErrorLogin";
 }
-<form >
-<h2>Error Login</h2>
+<form class="form-login">
+    <div class="form-group">
+        <h2>Error Login</h2>
 
-<span>@Model.ErrorLogin</span>
+        <span>@Model.ErrorLogin</span>
 
-    <br />
+        <br />
         <a href="/cuenta">Volver</a>
+        </div>
 </form>
