--- a/IntegradorProgramacionII/PresentationLayer/Views/Cuenta/Signup.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Cuenta/Signup.cshtml
@@ -1,7 +1,13 @@
 ﻿@{
     ViewBag.Title = "SignUp";
 }
-<h2>Creacion de Usuario</h2>
-<h3>Usuario creado correctamente</h3>
+<form>
+    <div class="form-group">
+        <h2>Creacion de Usuario</h2>
+        <h3>Usuario creado correctamente</h3>
+    </div>
+    <div>
+        <a href="/cuenta">Volver</a>
+    </div>
+</form>
 
-<a href="/cuenta">Volver</a>
