--- a/IntegradorProgramacionII/PresentationLayer/Views/Home/Menu.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Home/Menu.cshtml
@@ -36,6 +36,7 @@
                 </tr>
                 <tr>
                     <td><h5 class="m-dinero">@Model.dinero</h5></td>
+                    <td><h5 class="m-fichas">@Model.fichas</h5></td>
                     <td><button type="submit" class="btn btn-default">Buy</button></td>
                 </tr>
             </table>            
