Revert "Varios Cambios"
This reverts commit 809b9fd18b8b3495830f0c7abd130fc9c778bea5.

--- a/IntegradorProgramacionII/PresentationLayer/Views/Home/Apuesta.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Home/Apuesta.cshtml
@@ -27,7 +27,7 @@
             </tr>
         </table>
         <input type="button" id="apostar" value="Apostar" />
-        <input type="number" name="elegido" id="elegido" disabled="disabled" />
+        <input type="text" name="elegido" id="elegido" disabled="disabled" />
         <table id="apuestas-realizadas">
             <tr>
                 <td>Modalidad</td>
