--- a/IntegradorProgramacionII/PresentationLayer/Content/estilo.css
+++ b/IntegradorProgramacionII/PresentationLayer/Content/estilo.css
@@ -147,6 +147,9 @@ header {
 .m-partidas:before {
 	content: "\e602 ";
 }
+.m-fichas {
+    content: "\e608";
+}
 #elegido {
     display: none;
 }
@@ -155,3 +158,13 @@ header {
     margin: 2%;
     width: 25%;
 }
+.cero {
+    position: absolute;
+    top: 80px;
+    left: 342px;
+    width: 25px;
+    height: 100px;
+}
+    .cero:before {
+        content: "\e602";
+    }
