--- a/IntegradorProgramacionII/PresentationLayer/Views/Home/Jugar.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Home/Jugar.cshtml
@@ -12,6 +12,7 @@
         <div id="ballWheel"></div>
     </div>
 </div>
+<input type="button" id="enviarapuesta" value="Enviar" />
 <script src="~/Scripts/raphael.js"></script>
 <script src="~/Scripts/roulette.js"></script>
 <script>
