--- a/IntegradorProgramacionII/PresentationLayer/Views/Home/Apuesta.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Home/Apuesta.cshtml
@@ -23,6 +23,7 @@
                     </select>
                 </td>
                 <td><input type="number" id="numero" min="0", max="36"/></td>
+                <td><input type="number" id="numero1" min="0", max="36"/></td>
                 <td><input type="number" id="dinero" min="10", max="200"/></td>
             </tr>
         </table>
