--- a/IntegradorProgramacionII/PresentationLayer/Content/estilo.css
+++ b/IntegradorProgramacionII/PresentationLayer/Content/estilo.css
@@ -57,7 +57,7 @@ header {
     margin: auto;
     margin-top: 5px;
     position: relative;
-    width: 80%;
+    width: 100%;
 }
     header #perfil {
         display: inline-block;
@@ -94,10 +94,11 @@ header {
     height: 100%;
     position: absolute;
     right: 0px;
-    width: 70%;
+    padding: 2px;
+    width: 65%;
 }
 .nav-comprar {
-    left: 15%;
+    left: 18%;
     height: 100%;
     position: absolute;
     width: 15%;
@@ -135,8 +136,12 @@ header {
     font-size: 28px;
     background: #3291d1;
     border-radius: 15px;
-    height: 75px;
-    width: 150px;
+    margin: 5px;
+    height: 50px;
+    width: 100px;
+}
+.btn {
+    margin-right: 50px;
 }
 .m-dinero:before {
 	content: "\e600 ";
@@ -154,17 +159,30 @@ header {
     display: none;
 }
 #apuestas-realizadas {
-    background: red;
     margin: 2%;
-    width: 25%;
+    margin-top: -30px;
+    width: 250px;
 }
-.cero {
-    position: absolute;
-    top: 80px;
-    left: 342px;
-    width: 25px;
+#table-apuestas {
+    width: 100%;
     height: 100px;
 }
-    .cero:before {
-        content: "\e602";
+#table-apuestas tr td {
+    height: 25px;
+    width: 100px;
+}
+    #table-apuestas #apuestas td {
+        height: 100px;
+        width: 150px;
     }
+#td-modalidad {
+    height: 50px;
+}
+input[type="number"] {
+    border-radius: 5px;
+    border: 1px solid white;
+    padding: 0px;
+    text-align: center;
+    height: 50px;
+    width: 65px;
+}
