--- a/IntegradorProgramacionII/PresentationLayer/Views/Home/Apuesta.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Home/Apuesta.cshtml
@@ -1,41 +1,48 @@
 ﻿<div id="apuesta">
     <form action="/" method="post" id="formapuesta">
-        <table>
+        <table id="table-apuestas">
             <tr>
                 <td>Tipo de Apuesta</td>
                 <td>Numero</td>
                 <td>Dinero</td>
+                <td></td>
             </tr>
-            <tr>
-                <td>
+            <tr id="apuestas">
+                <td id="td-modalidad">
                     <select name="modalidad" id="modalidad">
                         <option value="Pleno">Pleno</option>
                         <option value="Semi">Semi</option>
                         <option value="Calle">Calle</option>
                         <option value="Cubre">Cubre</option>
                         <option value="Cuadro">Cuadro</option>
-                        <option value="Linea">Linea</option>
                         <option value="Columna">Columna</option>
                         <option value="Docena">Docena</option>
-                        <option value="Chances Simples">Chances Simples</option>
-                        <option value="Doble Columna">Doble Columna</option>
-                        <option value="Doble Docena">Doble Docena</option>
+                        <option value="Color">Color</option>
+                        <option value="Paridad">Paridad</option>
+                        <option value="1-18/19-36">1-18/19-36</option>
                     </select>
                 </td>
-                <td><input type="number" id="numero" min="0", max="36"/></td>
-                <td><input type="number" id="numero1" min="0", max="36"/></td>
-                <td><input type="number" id="dinero" min="10", max="200"/></td>
+                <td id="numeros"></td>
+                <td><input type='number' id='fichas'/></td>
+                <td>
+                    <input type="button" id="apostar" value="Apostar" />
+                </td>
             </tr>
         </table>
-        <input type="button" id="apostar" value="Apostar" />
+        
         <input type="number" name="elegido" id="elegido" disabled="disabled" />
         <table id="apuestas-realizadas">
-            <tr>
+            <tr id="artitulo">
                 <td>Modalidad</td>
                 <td>Numero</td>
                 <td>Dinero</td>
             </tr>
         </table>
     </form>
+    <div id="controls">
+        <button id="btn-jugar" disabled="disabled">Jugar</button>
+        <!--<a href="#" onclick="rouletteSpinner.doRollBall()">Roll Ball |</a>-->
+        <!--<a href="#" onclick="rouletteSpinner.doTakeBall()">Take Ball</a>-->
+    </div>
     <script src="~/Scripts/apuesta.js"></script>
 </div>
