--- a/IntegradorProgramacionII/PresentationLayer/Views/Home/Menu.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Home/Menu.cshtml
@@ -25,6 +25,7 @@
             <table>
                 <tr>
                     <td colspan="2"><b>Partidas</b></td>
+                    <td><button type="submit" class="btn">Buy</button></td>
                 </tr>
                 <tr>
                     <td><h5 class="">Jugadas</h5></td>
@@ -37,7 +38,6 @@
                 <tr>
                     <td><h5 class="m-dinero">@Model.dinero</h5></td>
                     <td><h5 class="m-fichas">@Model.fichas</h5></td>
-                    <td><button type="submit" class="btn btn-default">Buy</button></td>
                 </tr>
             </table>            
         </form>
