--- a/IntegradorProgramacionII/PresentationLayer/Views/Home/Menu.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Home/Menu.cshtml
@@ -25,7 +25,7 @@
             <table>
                 <tr>
                     <td colspan="2"><b>Partidas</b></td>
-                    <td><button type="submit" class="btn">Buy</button></td>
+                    <td><button type="submit" class="btn" disabled="disabled">Buy</button></td>
                 </tr>
                 <tr>
                     <td><h5 class="">Jugadas</h5></td>
@@ -36,7 +36,7 @@
                     <td><h5 class="m-victorias">@Model.victorias</h5></td>
                 </tr>
                 <tr>
-                    <td><h5 class="m-dinero">@Model.dinero</h5></td>
+                    <td><h5 class="m-dinero">@Model.dinero</h5></td> <br />
                     <td><h5 class="m-fichas">@Model.fichas</h5></td>
                 </tr>
             </table>            
