Bets can be done

--- a/IntegradorProgramacionII/PresentationLayer/Views/Home/Apuesta.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Home/Apuesta.cshtml
@@ -15,6 +15,7 @@
                         <option value="Calle">Calle</option>
                         <option value="Cubre">Cubre</option>
                         <option value="Cuadro">Cuadro</option>
+                        <option value="Linea">Linea</option>
                         <option value="Columna">Columna</option>
                         <option value="Docena">Docena</option>
                         <option value="Color">Color</option>
