Cleaned bets after paying

--- a/IntegradorProgramacionII/PresentationLayer/Views/Home/Menu.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Home/Menu.cshtml
@@ -36,7 +36,7 @@
                 </tr>
                 <tr>
                     <td><h5 class="m-dinero">@Model.dinero</h5></td>
-                    <td><h5 class="m-fichas">@Model.fichas</h5></td>
+                    <td><h5 id="m-fichas" class="m-fichas">@Model.fichas</h5></td>
                 </tr>
             </table>            
     </nav>
@@ -45,5 +45,5 @@
 <div id="comprar">
     <p class="m-dinero">Dinero Disponible: @Model.dinero</p>
     <p class="m-fichas">Fichas a comprar: </p><input type="number" name="fichas-comprar" id="fichas-comprar" />
-    <button id="btncompar">Comprar</button>
+    <button id="btncomprar">Comprar</button>
 </div>
