--- a/IntegradorProgramacionII/PresentationLayer/Views/Home/Apuesta.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Home/Apuesta.cshtml
@@ -26,7 +26,7 @@
                 <td id="numeros"></td>
                 <td><input type='number' id='fichas'/></td>
                 <td>
-                    <input type="button" id="apostar" value="Apostar" />
+                    <input type="button" id="apostar" class="boton" value="Apostar" />
                 </td>
             </tr>
         </table>
@@ -41,7 +41,7 @@
         </table>
     </form>
     <div id="controls">
-        <button id="btn-jugar" disabled="disabled">Jugar</button>
+        <button id="btn-jugar" disabled="disabled" class="boton">Jugar</button>
         <!--<a href="#" onclick="rouletteSpinner.doRollBall()">Roll Ball |</a>-->
         <!--<a href="#" onclick="rouletteSpinner.doTakeBall()">Take Ball</a>-->
     </div>
