Fixed code review issues

--- a/IntegradorProgramacionII/PresentationLayer/Views/Home/Menu.cshtml
+++ b/IntegradorProgramacionII/PresentationLayer/Views/Home/Menu.cshtml
@@ -35,7 +35,7 @@
                     <td><h5 class="m-victorias">@Model.victorias</h5></td>
                 </tr>
                 <tr>
-                    <td><h5 class="m-dinero">@Model.dinero</h5></td>
+                    <td><h5 id="money" class="m-dinero">@Model.dinero</h5></td>
                     <td><h5 id="m-fichas" class="m-fichas">@Model.fichas</h5></td>
                 </tr>
             </table>            
